--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,16 +1,5 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  text-align: left;
 }
 
 .App-header {
@@ -28,11 +17,29 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.table {
+  margin: 20px;
+}
+
+.main {
+  justify-content: center;
+}
+
+ul {
+  list-style: none;
+}
+
+.pagination-nav {
+  width: 200px;
+  padding: 0px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.page-nav {
+  cursor: pointer;
+}
+
+.active {
+  font-weight: 900;
 }
